# read-dicekey-js

./: .gitignore  .gitmodules  .npmrc  README.md  jest.config.json  package-lock.json  package.json  test.html  tsconfig.json
.github/workflows/: node.js.yml  npmpublish.yml
cpp/: CMakeLists.txt  ReadDicekey_embind.cpp  binding-helpers.hpp  unused.cmake
custom-typings/read-dicekey-js/: index.d.ts
src/: demo.ts  dice-key-image-processor.ts  dicekey-image-frame-worker.ts  dicekey-image-processor.ts  draw-rotated-and-scaled-image.ts  face-read.ts  face.ts  get-face-size-and-angle.ts  get-image-of-face-read.test.ts  get-image-of-face-read.ts  index.ts  memory-helpers.ts  read-dicekey-js.js  read-dicekey-js.wasm  read-dicekey-js.wasm.map  read-dickey.test.ts  render-faces-read.ts  render.test.ts  test.html  typed-webasm-module-memory-helpers.ts  undoverline-tables.ts  undoverline.ts  web-test.ts  web.ts
src/@types/read-dicekey-js/: index.d.ts
src/dicekeys/: render.ts
src/drawing/: create-angular-coordinate-system.ts  draw-rotated-rect.ts  index.ts  line.ts
src/tests/: get-image-of-face-read.test.ts  read-dickey.test.ts
